tests/sksl/errors/ProgramTooLarge_InterfaceBlock.glsl
### Compilation failed:

error: 1: array size is too large
MyInterfaceBlock {
^^^^^^^^^^^^^^^^
1 error
